# DuiLib_DuiEditor

./: README.md  SDL3编译说明.txt  xmake.lua  更新日志.txt
3rd/: SDL编译说明.txt  makeSDL.sh  makeSDL_android.bat  makeSDL_ttf_android.bat
3rd/SDL/VisualC/SDL/: SDL.vcxproj
3rd/SDL_gfx/: CMakeLists.txt  SDL3_gfx.vcxproj  SDL3_gfxPrimitives.c  SDL3_gfxPrimitives.h
3rd/SDL_image/VisualC/: SDL_image.vcxproj
3rd/SDL_ttf/VisualC/: SDL_ttf.vcxproj
Android/duidemo/app/: build.gradle
Android/duidemo/app/src/main/: AndroidManifest.xml
Android/duidemo/app/src/main/cpp/: App.cpp  App.h  CMakeLists.txt  main.cpp
Android/duidemo/app/src/main/java/org/libsdl/app/: SDLActivity.java
Android/duidemo/app/src/main/res/values/: strings.xml  themes.xml
Android/duidemo/app/src/main/res/values-night/: themes.xml
Android/duidemo/gradle/: libs.versions.toml
Android/duidemo/gradle/wrapper/: gradle-wrapper.properties
Demos/TestGtk/TestGtk/: TestGtk.vcxproj
Demos/TestGtkConsole/TestGtkConsole/: TestGtkConsole.vcxproj
Demos/TestSDL/: TestSDL.sln
Demos/TestSDL/TestSDL/: App.cpp  DialogModal.cpp  DialogModal.h  MainFrame.cpp  MainFrame.h  Test.cpp  TestSDL.vcxproj  TestSDL.vcxproj.filters
Demos/tutorial/tutorial/: MainFrame.cpp
DuiEditor/: DuiEditorViewDesign.cpp  DuiProject.cpp  ToolBoxCtrl.cpp  UIBuilder.cpp  UIManager.cpp  UIPropertyGridCtrl.cpp  UITrackerMuliti.cpp  UIWindow.cpp  UIWindow.h  UIWindowContainer.cpp  UIWindowContainer.h  UIWindowDesignView.cpp  UIWindowDesignView.h
DuiLib/: CMakeLists.txt  CMake编译说明.txt  DuiLib.h  DuiLib.vcxproj  DuiLib.vcxproj.filters  DuiLibGtk.vcxproj  DuiLibGtk.vcxproj.filters  DuiLibSDL.vcxproj  DuiLibSDL.vcxproj.filters  StdAfx.cpp  StdAfx.h  UIlib.cpp  UIlib.h  compat.h  makeDuiLib_android.bat  xmake.lua
DuiLib/Control/: IGridUI.cpp  IGridUI.h  ITreeUI.cpp  ITreeUI.h  TxtWinHost.cpp  TxtWinHost.h  UIActiveX.cpp  UIActiveX.h  UIAnimation.cpp  UIAnimation.h  UIBarCode.cpp  UIBarCode.h  UIButton.cpp  UIButton.h  UIColorPalette.cpp  UIColorPalette.h  UICombo.cpp  UICombo.h  UIComboEx.cpp  UIComboEx.h  UIComboWndGtk.cpp  UIComboWndGtk.h  UIComboWndSdl.cpp  UIComboWndSdl.h  UIComboWndWin32.cpp  UIComboWndWin32.h  UIDateTime.cpp  UIDateTime.h  UIDateTimeEx.cpp  UIDateTimeEx.h  UIDateTimeWndGtk.h  UIDateTimeWndSdl.cpp  UIDateTimeWndSdl.h  UIDateTimeWndWin32.cpp  UIDateTimeWndWin32.h  UIEdit.cpp  UIEdit.h  UIEditWndGtk.cpp  UIEditWndGtk.h  UIEditWndSdl.cpp  (+89 more)
DuiLib/Core/: ControlFactory.cpp  ControlFactory.h  UIBase.cpp  UIBase.h  UIContainer.cpp  UIContainer.h  UIControl.cpp  UIControl.h  UIDefine.h  UIDlgBuilder.cpp  UIDlgBuilder.h  UIFile.cpp  UIFile.h  UIGlobal.cpp  UIGlobal.h  UILangManager.cpp  UILangManager.h  UIManager.cpp  UIManager.h  UIManagerGtk.cpp  UIManagerGtk.h  UIManagerSDL.cpp  UIManagerSDL.h  UIManagerWin32.cpp  UIManagerWin32.h  UIResourceManager.cpp  UIResourceManager.h  UIScript.cpp  UIScript.h  UIWindowGtk.cpp  UIWindowGtk.h  UIWindowSDL.cpp  UIWindowSDL.h  UIWindowWin32.cpp  UIWindowWin32.h  UIXmlAttribute.cpp  UIXmlAttribute.h  UIXmlDocument.cpp  UIXmlDocument.h  UIXmlNode.cpp  (+1 more)
DuiLib/Layout/: UIAnimationTabLayout.cpp  UIAnimationTabLayout.h  UIChildLayout.cpp  UIChildLayout.h  UIChildWindow.cpp  UIChildWindow.h  UIDynamicLayout.cpp  UIDynamicLayout.h  UIHorizontalLayout.cpp  UIHorizontalLayout.h  UITabLayout.cpp  UITabLayout.h  UITableLayout.cpp  UITableLayout.h  UITileLayout.cpp  UITileLayout.h  UIVerticalLayout.cpp  UIVerticalLayout.h
DuiLib/Render/: IRender.cpp  IRender.h  UIClipSdl.cpp  UIClipSdl.h  UIClipWin32.cpp  UIClipWin32.h  UIObject_Cairo.cpp  UIObject_Cairo.h  UIObject_Sdl.cpp  UIObject_Sdl.h  UIObject_gdi.cpp  UIObject_gdi.h  UIObject_gdiplus.cpp  UIObject_gdiplus.h  UIRenderFactory_Cairo.cpp  UIRenderFactory_Cairo.h  UIRenderFactory_Sdl.cpp  UIRenderFactory_Sdl.h  UIRenderFactory_gdi.cpp  UIRenderFactory_gdi.h  UIRenderFactory_gdiplus.cpp  UIRenderFactory_gdiplus.h  UIRender_Cairo.cpp  UIRender_Cairo.h  UIRender_Sdl.cpp  UIRender_Sdl.h  UIRender_gdi.cpp  UIRender_gdi.h  UIRender_gdiplus.cpp  UIRender_gdiplus.h
DuiLib/Utils/: DPI.cpp  DPI.h  DpiSdl.cpp  DpiSdl.h  DpiWin32.cpp  DpiWin32.h  DuiString.cpp  DuiString.h  Md5.cpp  Md5.h  QREncode.cpp  QREncode.h  TrayIcon.cpp  TrayIcon.h  UIApplication.cpp  UIApplication.h  UIApplicationGtk.cpp  UIApplicationSdl.cpp  UIApplicationSdl.h  UIApplicationWin32.cpp  UIApplicationWin32.h  UIDataExchange.cpp  UIDataExchange.hpp  UIDelegate.cpp  UIDelegate.h  UIDialog.cpp  UIDialog.h  UIDialogCalendar.cpp  UIDialogCalendar.h  UIForm.cpp  UIForm.h  UIFrameBase.cpp  UIFrameBase.h  UIFrameWnd.cpp  UIFrameWnd.h  UIFrameWndGtk.cpp  UIFrameWndGtk.h  UIFrameWndSdl.cpp  UIFrameWndSdl.h  UIFrameWndWin32.cpp  (+18 more)
DuiPlugins/DuiLib/: UIGridCtrl.cpp  UIGridCtrl.h  UIKeyBoard.cpp  UIKeyBoard.h  UISciEdit.cpp  UISciEdit.h
DuiPreviewer/: MainFrame.cpp
DuiScript/: DuiScript.vcxproj  DuiScript.vcxproj.filters  RegCControlUI.h  RegCDialog.h  RegCDuiString.cpp  RegCDuiString.h  ScriptEngine.cpp  basedefine.h  regCRenderEngine.h  regColor.h  regTDrawInfo.h
Linux/CodeBlocks/DuiLib/: DuiLib.cbp  DuiLib.depend  DuiLib.layout
Linux/CodeBlocks/Test/: Test.cbp  Test.depend  Test.layout  main.cpp
Linux/VS2019/DuiLib/DuiLib/: DuiLib.vcxproj
Linux/VS2019/Test/Test/: Test.vcxproj
Linux/gcc/: App.cpp  CMakeLists.txt  CMake编译说明.txt  MainFrame.h  main.cpp  makeCMake.sh  xmake.lua
MacOS/DuiLib/: Config.xcconfig
MacOS/DuiLib/DuiLib.xcodeproj/: project.pbxproj
MacOS/Test/Test.xcodeproj/: project.pbxproj
MacOS/TestApp/: Config.xcconfig
MacOS/TestApp/TestApp/: App.cpp  App.h  MainFrame.h  main.mm
MacOS/TestApp/TestApp.xcodeproj/: project.pbxproj
MacOS/TestApp/TestApp.xcodeproj/project.xcworkspace/xcuserdata/test.xcuserdatad/: UserInterfaceState.xcuserstate
MacOS/TestApp/TestApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
Project/: DuiLibSDL.sln
tests/: test_invariant_nanosvg.h
